# geoharness

./: .env.example  .gitignore  README.md  agent.py  geo_mcp.py  llm.py  main.py  pyproject.toml  tools.py
eval/solar/: eval.py  eval_baseline.py  eval_rules.md
eval/solar/data/: eval_dataset.json  eval_locations.txt  eval_locations_expansion.txt
eval/solar/data/output/selection/: probe_results.json
eval/solar/models/: eval.py
eval/solar/results/: baseline_20260614T191621Z.json  baseline_20260615T171342Z.json  eval_20260607T124903Z.json  eval_20260607T125832Z.json  eval_20260607T205354Z.json  eval_20260607T210035Z.json  eval_20260607T210740Z.json  eval_20260610T194313Z.json  eval_20260610T203718Z.json  eval_20260613T154331Z.json  eval_20260613T161552Z.json  eval_20260613T172113Z.json  eval_20260613T174937Z.json  eval_20260613T175549Z.json  eval_20260613T181741Z.json  eval_20260614T165721Z.json  eval_20260615T170436Z.json  eval_results.json
eval/solar/utils/: build_eval_dataset.py  find_aspect.py  probe_location.py
frontend/: app.js  index.html  style.css
models/: agents.py  eval.py  tools.py
scripts/: deploy_frontend.sh  setup_cloudfront.sh  setup_frontend.sh
tests/: test_agent.py  test_tools.py
