[project]
name = "geoharness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.103.1",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.4",
    "httpx>=0.28.1",
    "langfuse>=4.6.1",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
